Fixed navbar allignment issues on mobile phones

--- a/Website/LandingPage/static/LandingPage/Sass/index.sass
+++ b/Website/LandingPage/static/LandingPage/Sass/index.sass
@@ -1,13 +1,34 @@
 $nav-color: #cccccc
 $text-near-white: #f4f4f4
+$dark-overlay-color: rgba(0, 0, 0, 0.4)
 
+$hero-image-min-height: 500px
+
+
+// Custom navbar styling
 .navbar
-    background-color: $nav-color
+    .navbar-toggler
+        border: none
 
+// Custom intro styling
 #intro
-    bacgkround-image: url("https://static.pexels.com/photos/373543/pexels-photo-373543.jpeg")
-    background-size: cover
-    background-attachment: fixed
-    background-position: center
+    .image-container
+        background-image: url("https://static.pexels.com/photos/373543/pexels-photo-373543.jpeg")
+        background-size: cover
+        background-attachment: scroll
+        background-position: center
 
-    min-height: 700px
+        min-height: $hero-image-min-height
+
+        .dark-overlay
+            background-color: $dark-overlay-color
+            position: absolute
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+
+            min-height: $hero-image-min-height
+
+            .title
+                color: $text-near-white
